sign-up button was overlayed upon and fixed by increasing its z-index

--- a/src/components/pages/homepage/intro.styles.css
+++ b/src/components/pages/homepage/intro.styles.css
@@ -52,6 +52,7 @@
 #sign-up-button {
     grid-column: 2 / 3;
     margin-bottom: 5.4em;
+    z-index: 5;
 }
 
 /* floating animation */
